java 21 ok. First commit